--- a/grid.css
+++ b/grid.css
@@ -20,10 +20,10 @@
     grid-template-rows: min-content min-content 1fr min-content;
     gap: 1px;
   
-    > * {
+    /* > * {
       padding: 1rem;
       text-align: center;
-    }
+    } */
   
     @media (max-width: 600px) {
       grid-template-columns: 100%;
