--- a/grid.css
+++ b/grid.css
@@ -37,21 +37,21 @@
   
   .page-header {
     grid-column: 1 / -1;
-    background: #ffcdd2;
+    background: #cf8b92;
   }
   
   .page-sidebar {
     grid-column: 1 / 2;
     grid-row: 2 / 4;
-    background: #e1bee7;
+    background: #d8a8e0;
   }
   .page-nav {
     grid-column: 2 / 3;
-    background: #bbdefb;
+    background: #8cb6d8;
   }
   .page-main {
     grid-column: 2 / 3;
-    background: #dcedc8;
+    background: #a5bd8b;
   }
   .page-footer {
     grid-column: 1 / -1;
